--- a/04Vue.extend的进阶用法.html
+++ b/04Vue.extend的进阶用法.html
@@ -64,7 +64,7 @@
                 showLoading(params) {
                     const hide = this.$loading('正在加载，请稍等。。。')
                     setTimeout(() => {
-                        // hide()
+                        hide()
                     }, 2000)
                 }
             },
